name:                liquidhaskell-std
version:             0.1.0.0
synopsis:            Standard library of LiquidHaskell specifications, for the
                     `base`, `ghc-prim`, and `integer-gmp` packages.
homepage:            https://github.com/spinda/liquidhaskell-std
license:             BSD3
license-file:        LICENSE
author:              Michael Smith
maintainer:          michael@diglumi.com
category:            LiquidHaskell
build-type:          Custom
cabal-version:       >=1.18

library
  exposed-modules:     Liquid.Control.Exception,
                       Liquid.Data.Bits,
                       Liquid.Data.Foldable,
                       Liquid.Data.Traversable,
                       Liquid.GHC.Base,
                       Liquid.GHC.Classes,
                       Liquid.GHC.Integer,
                       Liquid.GHC.Num,
                       Liquid.GHC.Prim,
                       Liquid.GHC.Real,
                       Liquid.GHC.Types,
                       Liquid.Prelude,
                       LiquidHaskell.Prelude
  other-modules:       Liquid.GHC.Integer.Type
  build-depends:       base,
                       ghc-prim,
                       integer-gmp,
                       liquidhaskell-core
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -fplugin=LiquidHaskell.Plugin
                       -fplugin-opt=LiquidHaskell.Plugin:no-wired-in-specs
                       -fplugin-opt=LiquidHaskell.Plugin:no-prune
                       -fplugin-opt=LiquidHaskell.Plugin:no-termination

